[project]
name = "ai-workflows-dependency-audit"
version = "0.1.0"
description = "Audit repo to validate AI workflows bootcamp dependency compatibility"
authors = [{ name = "Future Proof Data Science" }]
requires-python = ">=3.10,<3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "psycopg2-binary>=2.9.10,<3",
    "mcp>=1.16.0,<2",
    "python-dotenv>=1.1.1,<2",
    "langchain~=0.3.0",
    "langchain-core~=0.3.0",
    "langchain-openai~=0.2.0",
    "langgraph~=0.2.0",
    "pandas>=2.0.0,<3",
    "numpy>=1.24.0,<2",
    "streamlit>=1.28.0,<2",
    "sqlalchemy>=2.0.0,<3",
    "pyyaml>=6.0.0,<7",
    "jupyter>=1.0.0,<2",
    "ipykernel>=6.0.0,<7",
    "matplotlib>=3.7.0,<4",
    "seaborn>=0.12.0,<0.13",
    "pandasai>=3.0.0,<4",
    "pandasai-litellm>=0.0.1,<0.0.2",
    "pandasai-sql>=0.1.7,<0.2",
    "typing-extensions>=4.0.0,<5",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0,<8",
    "black>=23.0.0,<24",
    "flake8>=6.0.0,<7",
    "ruff>=0.6.5,<0.7",
]

[tool.uv]
package = false
default-groups = "all"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
